12. Alter the way the light part of etchibng is drawn - should help with darker color schemes.
13. Draw border around filled progress.
14. Fix light spinbuttons on dark background.
15. Option to have button-like checks/radios.
16. Draw square border for for frames that pass no detail and no widget to
    gtkDrawShadow.
17. Use base for light part of lineedit border, and background for scrollview.
18. Default to treating Firefox as firefox>.0 - cmake with -DQTC_OLD_MOZILLA=true
    to revert.
19. Draw statusbar frames, if enabled.
20. Nicer 'V' arrows.
21. When reading KDe settings, read (if they exist):
        /etc/kderc
        /etc/kde4rc or /etc/kde3rc
        /etc/kde4/kdeglobals or /etc/kde3/kdeglobals
        <KDE4 prefix>/usr/share/config/kdeglobals or <KDE3 prefix>/usr/share/config/kdeglobals
        <KDE4 prefix>/usr/share/config/system.kdeglobals or <KDE3 prefix>/usr/share/config/system.kdeglobals
        $KDEHOME/share/config/kdeglobals

0.59.7
------
1. Read tooltip colours from qt config file.

0.59.6
------
1. Improve appearance of SWT scrollbars.
2. Fix colour of tri-state checkboxes.

0.59.5
------
1. Draw disabled icons desaturated - more KDE like.
2. 'Fix' pixelation of firefox dialog icons. They look
   slightly blurry, due to being scaled, but this is nicer
   than the previous pixelated icons.
3. Removed KDE event filter (QTC_ADD_EVENT_FILTER cmake option)
   - causes way too many errors.

0.59.4
------
1. Fix reading in of lightBorder for custom gradients.
2. Icon path fix by Ilya Paramonov.

0.59.3
------
1. Also check in share/kde4/apps/kstyle/themes for qtc_*.themerc files.
2. Fix evolution calendar crash.
3. Fix evolution listview headers.
4. Slightly better check/radio positioning.

0.59.2
------
1. Fix appearance of shiny glass defult buttons.
2. Give glass default buttons a light border.
3. New cmake option:

    -DQTC_NEW_MOZILLA=true
        When Firefox, and thunderbird, are being themed - treat them as if they